--- a/index.html
+++ b/index.html
@@ -5,28 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!--header-->
-    <header>
-        <a href="./index.html"> <span> WEB </span> STUDIO </a>
+    <header class="header">
+        <a class="logo link" href="./index.html"> <span> WEB </span> STUDIO </a>
         <nav>
-            <ul>
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <ul class="header-list list">
+                <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
+                <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+                <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+11 (000) 111-11-11</a></li>
+        <ul class="header-list list">
+            <li><a class="header-mail link" href="">info@devstudio.com</a></li>
+            <li><a class="header-tel link" href="">+11 (000) 111-11-11</a></li>
         </ul>
     </header>
     <main>
         <!--hero-->
         <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+            <h1 class="hero-main">Effective Solutions for Your Business</h1>
+            <button class="hero-btn" type="button">Order Service</button>
         </section>
         <!--Our goal-->
         <section>
@@ -96,12 +101,11 @@
             </ul>
         </section>
     </main>
-    
     <!--footer-->
-    <footer>
-        <a href="./index.html"> <span> WEB </span> STUDIO </a>
-        <p>Increase the flow of customers and sales for your 
-        business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a class="footer-logo link" href="./index.html"> <span> WEB </span> STUDIO </a>
+        <p class="footer-text">Increase the flow of customers and sales for your 
+        business with digital marketing &#38; growth solutions.</p>
     </footer>
 
 </body>
