--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!--header-->
     <header class="header">
-        <a class="logo link" href="./index.html"> <span> WEB </span> STUDIO </a>
+        <a class="logo link" href="./index.html"> <span class="web"> WEB </span> STUDIO </a>
         <nav>
             <ul class="header-list list">
                 <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
@@ -29,40 +29,40 @@
     </header>
     <main>
         <!--hero-->
-        <section>
+        <section class="hero">
             <h1 class="hero-main">Effective Solutions for Your Business</h1>
             <button class="hero-btn" type="button">Order Service</button>
         </section>
         <!--Our goal-->
-        <section>
-            <h2>Our goal</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+        <section class="hero">
+            <h2 hidden>Our goal</h2>
+            <ul class="hero-list list">
+                <li class="hero-item">
+                    <h3 class="hero-headline">Strategy</h3>
+                    <p class="hero-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best
+                <li class="hero-item">
+                    <h3 class="hero-headline">Punctuality</h3>
+                    <p class="hero-text">Bring the key message to the brand's audience for the best
                         price within the shortest possible time.</p>
                 </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest
+                <li class="hero-item">
+                    <h3 class="hero-headline">Diligence</h3>
+                    <p class="hero-text">Research and confirm brands that present the strongest
                         digital growth opportunities and minimize risk.</p>
                 </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences.
+                <li class="hero-item">
+                    <h3 class="hero-headline">Technologies</h3>
+                    <p class="hero-text">Design practice focused on digital experiences.
                         We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
-        <section>
-        <!--What are we doing-->
-                <h2>What are we doing</h2>
         </section>
-            <ul>
+        <!--What are we doing-->
+        <section class="hero">
+            <h2 class="hero-title">What are we doing</h2>
+            <ul class="hero-list list">
                 <li>
                     <img src="./images/Rectangle71.jpg" alt="monitor" width="360">
                 </li>
@@ -75,35 +75,35 @@
             </ul>
         </section>
         <!--Our Team-->
-        <section>
-            <h2>Our Team</h2>
-            <ul>
+        <section class="hero">
+            <h2 class="hero-title">Our Team</h2>
+            <ul class="hero-list list">
                 <li>
                     <img src="./images/img.jpg" alt="mark" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="hero-headline">Mark Guerrero</h3>
+                    <p class="hero-text">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/img(1).jpg" alt="tom" width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="hero-headline">Tom Ford</h3>
+                    <p class="hero-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img(2).jpg" alt="camila" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="hero-headline">Camila Garcia</h3>
+                    <p class="hero-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img(3).jpg" alt="daniel" width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="hero-headline">Daniel Wilson</h3>
+                    <p class="hero-text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <!--footer-->
     <footer class="footer">
-        <a class="footer-logo link" href="./index.html"> <span> WEB </span> STUDIO </a>
+        <a class="footer-logo link" href="./index.html"> <span class="web"> WEB </span> STUDIO </a>
         <p class="footer-text">Increase the flow of customers and sales for your 
         business with digital marketing &#38; growth solutions.</p>
     </footer>
